--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -15,6 +15,7 @@
   </p>
 
   <h1>ednilson</h1>
+  <h2>fabianeeeeeee</h2>
 
   <button ion-button secondary menuToggle>Toggle Menu</button>
 </ion-content>
